objects/VisitOps__Products_and_Services__c.object
<CustomObject>
    <fields>
        <fullName>VisitOps__BulkOrderInformation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bulk Order Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__GiftApprovedFor__c</fullName>
        <label>Gift Approved For</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Employees</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitOps__ItemDescription__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__ItemImage__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>VisitOps__ItemName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Item Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ItemPrice__c</fullName>
        <label>Item Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VisitOps__LeadTimeRequired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lead Time Required</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__LocationFormula__c</fullName>
        <formula>VisitOps__Provider__r.VisitOps__Location__c</formula>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__ProductsAndServicesType__c</fullName>
        <formula>RecordType.Name</formula>
        <label>Products and Services Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisitOps__Provider__c</fullName>
        <label>Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>VisitOps__Supplier__c.VisitOps__Supplier_Type__c</field>
                <operation>equals</operation>
                <value>Gifts, Signage</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>VisitOps__Supplier__c</referenceTo>
        <relationshipLabel>Products and Services</relationshipLabel>
        <relationshipName>ProductsAndServices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisitOps__ShippingAndOrderInformation__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Shipping and Order Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>VisitOps__SignageType__c</fullName>
        <label>Signage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adhesive Vinyl</fullName>
                </value>
                <value>
                    <fullName>A-Frames</fullName>
                </value>
                <value>
                    <fullName>Cutouts</fullName>
                </value>
                <value>
                    <fullName>Flags</fullName>
                </value>
                <value>
                    <fullName>Floor Graphics</fullName>
                </value>
                <value>
                    <fullName>Portable Display</fullName>
                </value>
                <value>
                    <fullName>Posters</fullName>
                </value>
                <value>
                    <fullName>Signs and Banners</fullName>
                </value>
                <value>
                    <fullName>Wearables</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Products and Services</label>
    <listViews>
        <fullName>VisitOps__All</fullName>
        <columns>NAME</columns>
        <columns>VisitOps__LocationFormula__c</columns>
        <columns>VisitOps__Provider__c</columns>
        <columns>VisitOps__ItemName__c</columns>
        <columns>VisitOps__ItemPrice__c</columns>
        <columns>VisitOps__SignageType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PAS{0000}</displayFormat>
        <label>Products and Services Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products and Services</pluralLabel>
    <recordTypes>
        <fullName>VisitOps__GiftProductsAndServices</fullName>
        <active>true</active>
        <label>Gift Products and Services</label>
    </recordTypes>
    <recordTypes>
        <fullName>VisitOps__SignageProductsAndServices</fullName>
        <active>true</active>
        <label>Signage Products and Services</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>